[project]
name = "rex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anchorpy>=0.21.0",
    "base58>=2.1.1",
    "dotenv>=0.9.9",
    "ipykernel>=7.0.1",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pip>=25.2",
    "requests>=2.32.5",
    "solana>=0.36.6",
    "solders>=0.26.0",
    "statsmodels>=0.14.5",
]
